signin requests done / cleanup

--- a/lb-service/package.json
+++ b/lb-service/package.json
@@ -12,6 +12,8 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "@noble/secp256k1": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "elliptic": "^6.5.4"
   }
 }
