--- a/cart-service/package.json
+++ b/cart-service/package.json
@@ -9,6 +9,9 @@
   "author": "Petar Markovic",
   "license": "ISC",
   "dependencies": {
+    "@noble/secp256k1": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "elliptic": "^6.5.4",
     "express": "^4.18.2",
     "redis": "^4.6.7"
   },
